@@ -1,6 +1,11 @@
 package net.openan.a2at.sdk.core.validation;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+
 import net.openan.a2at.sdk.core.exception.A2ATError;
 import net.openan.a2at.sdk.core.model.SlotValidationError;
 
@@ -17,6 +22,8 @@ public class ContentValidationException extends A2ATError {
 
     private final List<SlotValidationError> errors;
 
+    private final Map<String, Object> params;
+
     /**
      * Creates a content validation failure with an error code and one message.
      *
@@ -24,7 +31,7 @@ public class ContentValidationException extends A2ATError {
      * @param message failure message
      */
     public ContentValidationException(String code, String message) {
-        this(code, message, List.of());
+        this(code, message, List.of(), Map.of(), null);
     }
 
     /**
@@ -35,7 +42,7 @@ public class ContentValidationException extends A2ATError {
      * @param errors structured per-slot validation error details
      */
     public ContentValidationException(String code, String message, List<SlotValidationError> errors) {
-        this(code, message, errors, null);
+        this(code, message, errors, Map.of(), null);
     }
 
     /**
@@ -46,21 +53,32 @@ public class ContentValidationException extends A2ATError {
      * @param cause root cause
      */
     public ContentValidationException(String code, String message, Throwable cause) {
-        this(code, message, List.of(), cause);
+        this(code, message, List.of(), Map.of(), cause);
+    }
+
+    public ContentValidationException(String code, String message, List<SlotValidationError> errors, Throwable cause) {
+        this(code, message, errors, Map.of(), cause);
     }
 
     /**
-     * Creates a content validation failure with an error code, one message, slot details and a root cause.
+     * Creates a content validation failure with an error code, one message, slot details, partial extraction params and
+     * a root cause.
+     *
+     * <p>{@code params} carries the extraction result produced before rejection; the semantic validator deliberately
+     * emits {@code null} values for slots it could not extract, so both the map and its values may be {@code null} and
+     * must be accepted defensively. The stored copies are unmodifiable and preserve the original ordering.
      *
      * @param code machine-readable error code for the failure
      * @param message failure message
      * @param errors structured per-slot validation error details
+     * @param params partial extraction params, may carry {@code null} values
      * @param cause root cause
      */
     public ContentValidationException(
-            String code, String message, List<SlotValidationError> errors, Throwable cause) {
+            String code, String message, List<SlotValidationError> errors, Map<String, Object> params, Throwable cause) {
         super(code, message, cause);
-        this.errors = errors == null ? List.of() : List.copyOf(errors);
+        this.errors = errors == null ? List.of() : Collections.unmodifiableList(new ArrayList<>(errors));
+        this.params = params == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(params));
     }
 
     /**
@@ -70,5 +88,15 @@ public class ContentValidationException extends A2ATError {
      */
     public List<SlotValidationError> errors() {
         return errors;
+    }
+
+    /**
+     * Returns the partial extraction params captured before rejection.
+     *
+     * @return unmodifiable map preserving insertion order, never null; values may be {@code null} for slots the
+     *     semantic validator could not extract
+     */
+    public Map<String, Object> params() {
+        return params;
     }
 }
